what environment variabels need to be updated

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@
 # next.js
 /.next/
 /out/
-next-env.d.ts
 
 # production
 /build
@@ -26,17 +25,17 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env*
+!/.env.example
+!/.env.ci
+!.env.sample
 
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
+next-env.d.ts
 
-# turbo
-.turbo
+# genkit
+.genkit/
