--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 /node_modules
 /.pnp
 .pnp.js
-.yarn/install-state.gz
 
 # Testing
 /coverage
@@ -22,14 +21,16 @@
 
 # Local .env files
 .env
-.env*.local
-*.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+src/.env
 
 # Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
 
 # Editor directories and files
 .vscode
