--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 # Testing
 /coverage
 
-# Next.js
+# Next.js build
 /.next/
 /out/
 
@@ -19,18 +19,15 @@
 .DS_Store
 *.pem
 
-# Local .env files
+# Local Environment Variables
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-src/.env
+.env*.local
 
 # Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
 # Editor directories and files
 .vscode
@@ -40,3 +37,10 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw?
+
+# Firebase
+/firebase-debug.log
+/firestore.rules
+
+# package-lock.json
+package-lock.json
